# northflow-trading-bot

./: .gitignore  .replit  Cargo.toml  README.md  replit.md
attached_assets/: Replit-agent-phase-3-prompt_1780498603227.md  Replit-agent-phase-6-hardening-patch-prompt_1780506990714.md  Replit-agent-phase-7-prompt_1780507911001.md  Replit_risk_attribution_patch_prompt_1780518952968.md  Replit_screened_vwap_scalp_v2_patch_prompt_1780549622210.md
config/: forecast.toml  research.toml  research_5m.toml  research_5m_entry_audit.toml  research_btcusdt_2020_2025.toml  research_comparison.toml  research_ema21_long_mid_edge_cd0.toml  research_etp_ema21_only.toml  research_etp_vwap_only.toml  research_etp_vwap_strict.toml  research_liquidity_sweep_reclaim_v1_btc_1m_2020_2025.toml  research_liquidity_sweep_reclaim_v1_btc_5m_2020_2025.toml  research_lsr_v1_btc_15m_2020_2025.toml  research_mean_revert_v1_btc_15m_2020_2025.toml  research_mean_revert_v1_btc_15m_long_only_2020_2025.toml  research_mean_revert_v1_btc_15m_long_only_binance_futures_taker_2020_2025.toml  research_mean_revert_v1_btc_15m_long_only_edge_2020_2025.toml  research_mean_revert_v1_btc_1m_2020_2025.toml  research_mean_revert_v1_btc_1m_confirmed_2020_2025.toml  research_mean_revert_v1_btc_5m_2020_2025.toml  research_sane_risk.toml  research_strategy_comparison.toml  research_svs2_momentum_btc_5m_2020_2025.toml  research_v2_bull_continuation_mid_edge.toml  research_v2_bull_tp20_vol15.toml  research_v2_bull_vol15.toml  research_vwap_reclaim_bull_baseline.toml  research_vwap_reclaim_low_vol.toml  (+17 more)
docs/: DATA_DOWNLOAD.md  (+16 more)
(+1365 files in other folders)
